# push_swap

./: CMakeLists.txt  Makefile  checker  input.c  main.c  make_check  make_push  optimal_choice.c  proc_input.c  push_swap  sort_large.c  sort_paucity.c  sort_sm_amount.c  sort_small.c  visual.c
checker_src/: CMakeLists.txt
cheker/: CMakeLists.txt  cheker.c  do_command.c
ft_printf/: Makefile
ft_printf/ft_printf/: csp.c  dioux.c  e.c  f.c  flags.c  ft_dtoa.c  ft_insert.c  g.c  help.c  lst_killer.c  print.c  print_for_printf.c  searching.c  size_converter.c  size_revision.c
ft_printf/libft/: ft_get_next_line.c  ft_itoa_base.c  ft_lstlen.c  ft_mult.c  ft_mult_atod.c  ft_power_for_two.c  ft_utoa.c
ft_printf/libft/includes/: libft.h
includes/: cheker.h  dc_lists.h  input.h  push_swap.h  service.h  visual.h
libft/: CMakeLists.txt  Makefile  ft_del.c  ft_get_next_line.c  ft_strjoin.c  libft.h
libft/ft_printf/: csp.c  dioux.c  e.c  f.c  flags.c  ft_dtoa.c  ft_insert.c  g.c  help.c  lst_killer.c  print.c  print_for_printf.c  searching.c  size_converter.c  size_revision.c
libft/includes/: ft_printf.h  libft.h  stdlibft.h
libft/src/: ft_allocated_size.c  ft_atoi.c  ft_bzero.c  ft_del.c  ft_free.c  ft_get_next_line.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_itoa_base.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlen.c  ft_lstmap.c  ft_lstnew.c  ft_malloc.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_mult.c  ft_mult_atod.c  ft_power.c  ft_power_for_two.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  (+33 more)
push_swap/: CMakeLists.txt  main.c  optimal_choice.c  sort_large.c
push_swap_src/: CMakeLists.txt  main.c  optimal_choice.c  sort_large.c
service/: s_list.c  service_com_p_ab.c  service_com_r_ab.c  service_com_rr.c  service_com_rr_ab.c  service_com_rrr.c  service_com_s_ab.c  service_com_ss.c  service_frame.c  service_in_cr_frame.c  service_input.c  service_list.c  service_mult_call_1.c  service_mult_call_2.c  service_mult_call_3.c  service_push_swap.c  service_push_swap_2.c  service_swaping.c
