set(SOURCE_LIB
        src/ft_allocated_size.c
        src/ft_atoi.c
        src/ft_bzero.c
        src/ft_del.c
        src/ft_free.c
        src/ft_get_next_line.c
        src/ft_isalnum.c
        src/ft_isalpha.c
        src/ft_isascii.c
        src/ft_isdigit.c
        src/ft_isprint.c
        src/ft_itoa.c
        src/ft_itoa_base.c
        src/ft_lstadd.c
        src/ft_lstdel.c
        src/ft_lstdelone.c
        src/ft_lstiter.c
        src/ft_lstlen.c
        src/ft_lstmap.c
        src/ft_lstnew.c
        src/ft_malloc.c
        src/ft_memalloc.c
        src/ft_memccpy.c
        src/ft_memchr.c
        src/ft_memcmp.c
        src/ft_memcpy.c
        src/ft_memdel.c
        src/ft_memmove.c
        src/ft_memset.c
        src/ft_mult.c
        src/ft_mult_atod.c
        src/ft_power.c
        src/ft_power_for_two.c
        src/ft_putchar.c
        src/ft_putchar_fd.c
        src/ft_putendl.c
        src/ft_putendl_fd.c
        src/ft_putnbr.c
        src/ft_putnbr_fd.c
        src/ft_putstr.c
        src/ft_putstr_fd.c
        src/ft_qsort_i.c
        src/ft_realloc.c
        src/ft_sqrt.c
        src/ft_strcat.c
        src/ft_strchr.c
        src/ft_strclr.c
        src/ft_strcmp.c
        src/ft_strcpy.c
        src/ft_strdel.c
        src/ft_strdup.c
        src/ft_strequ.c
        src/ft_striter.c
        src/ft_striteri.c
        src/ft_strjoin.c
        src/ft_strlcat.c
        src/ft_strlen.c
        src/ft_strmap.c
        src/ft_strmapi.c
        src/ft_strncat.c
        src/ft_strncmp.c
        src/ft_strncpy.c
        src/ft_strndup.c
        src/ft_strnequ.c
        src/ft_strnew.c
        src/ft_strnstr.c
        src/ft_strrchr.c
        src/ft_strsplit.c
        src/ft_strstr.c
        src/ft_strsub.c
        src/ft_strtrim.c
        src/ft_tolower.c
        src/ft_toupper.c
        src/ft_utoa.c)
set(SOURCE_PRINT
        fr_printf/csp.c
        fr_printf/dioux.c
        fr_printf/e.c
        fr_printf/f.c
        fr_printf/flags.c
        fr_printf/ft_dtoa.c
        fr_printf/ft_insert.c
        fr_printf/g.c
        fr_printf/help.c
        fr_printf/lst_killer.c
        fr_printf/print.c
        fr_printf/print_for_printf.c
        fr_printf/searching.c
        fr_printf/size_converter.c
        fr_printf/size_revision.c)

set(HEADERS_LIB
        includes/stdlibft.h
        includes/ft_printf.h includes/libft.h)
add_library(libft STATIC ${SOURCE_LIB} ${HEADERS_LIB})